tests/ui/macros/issue-21356.stderr
error: invalid fragment specifier `t_ty`
  --> $DIR/issue-21356.rs:3:22
   |
LL | macro_rules! test { ($wrong:t_ty ..) => () }
   |                      ^^^^^^^^^^^
   |
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility

error: aborting due to 1 previous error

